<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Contacts</string>
    <string name="title_section2">Favorites</string>
    <string name="title_section3">Section 3</string>
    <string name="action_search">Search</string>
    <string name="action_add_person">Add Person</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="hello_world">Hello world!</string>
    <string name="NewName">Nom</string>
    <string name="edit_name">Nom</string>
    <string name="NewPrenom">Prenom</string>
    <string name="edit_prenom">Prenom</string>
    <string name="NewPhone">Telephone</string>
    <string name="edit_tel">Numero</string>
    <string name="NewAdress">Adresse</string>
    <string name="edit_Adress">Adresse</string>
    <string name="Newmail">Mail</string>
    <string name="edit_mail">Mail</string>
    <string name="Validation">Enregistrer</string>
    <string name="desc1">Image du contact</string>

</resources>
